--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="E:/20210627/JAR/mssql-jdbc-9.2.1.jre15.jar"/>
-	<classpathentry kind="lib" path="E:/20210627/JAR/mysql-connector-java-8.0.25.jar"/>
+	<classpathentry kind="lib" path="/Users/jas/eclipse/JarFiles/mssql-jdbc-9.2.1.jre15.jar"/>
+	<classpathentry kind="lib" path="/Users/jas/eclipse/JarFiles/mysql-connector-java-8.0.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
